--- a/style.css
+++ b/style.css
@@ -84,3 +84,20 @@ li:first-child{
 li:last-child{
     font-style: italic;
 }
+
+a:link, a:visited{
+    color:#1098ad;
+    text-decoration: none;
+    
+}
+
+a:hover{
+    color: orangered;
+    font-weight: bold;
+    text-decoration: underline; 
+}
+
+a:active{
+    background-color: black;
+    font-style: italic;
+}
