--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    color:#444;
+    font-family: sans-serif;
+    border-top: 10px solid #1098ad;
+}
+
+.main-header{
+    background-color: #f7f7f7;
+    padding: 20px 40px;
+    margin-bottom: 60px;
+}
+
+.post-header{
+    margin-bottom: 40px;
+}
+
+article{
+    margin-bottom: 60px;
+}
+
+aside{
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
+}
+
 h1, h2, h3, h4, p, li{
     font-family: sans-serif;
     color: #444;
@@ -16,13 +46,13 @@ h1{
 
 h2{
     font-size: 40px;
-
+    margin-bottom: 30px;
 }
 
 h3{
     font-size: 30px;
-    
-
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 h4{
     font-size: 20px;
@@ -33,12 +63,17 @@ h4{
 
 p{
     font-size: 22px;
-   
+    margin-bottom: 15px;
     line-height: 1.5;
+}
+ul, ol{
+    margin-left: 50px;
+    margin-bottom: 30px;
 }
 li{
     
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 /*footer p {
@@ -67,15 +102,7 @@ li{
     list-style: none;
 }
 
-.main-header{
-    background-color: #f7f7f7;
-}
 
-aside{
-    background-color: #f7f7f7;
-    border-top: 5px solid #1098ad;
-    border-bottom: 5px solid #1098ad;
-}
 
 li:first-child{
     font-weight: bold;
@@ -83,6 +110,7 @@ li:first-child{
 
 li:last-child{
     font-style: italic;
+    margin-bottom: 0;
 }
 
 a:link, a:visited{
