--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     background-color: #f7f7f7;
     padding: 20px 40px;
     margin-bottom: 60px;
+    height:80px;
 }
 
 .post-header{
@@ -26,6 +27,7 @@ aside{
     background-color: #f7f7f7;
     border-top: 5px solid #1098ad;
     border-bottom: 5px solid #1098ad;
+    width: 500px;
 }
 
 h1, h2, h3, h4, p, li{
@@ -128,4 +130,9 @@ a:hover{
 a:active{
     background-color: black;
     font-style: italic;
+}
+
+.post-img{
+    width:100%;
+    height:auto;
 }
