--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     color:#444;
     font-family: sans-serif;
     border-top: 10px solid #1098ad;
+    position: relative;
 }
 
 .main-header{
@@ -67,6 +68,7 @@ p{
     font-size: 22px;
     margin-bottom: 15px;
     line-height: 1.5;
+    text-align: justify;
 }
 ul, ol{
     margin-left: 50px;
@@ -140,4 +142,14 @@ a:active{
 .container{
     width: 700px;
     margin: 0 auto;
+    position: relative;
+}
+
+button{
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+    position: absolute;
+    bottom:50px;
+    right: 50px;
 }
