--- a/style.css
+++ b/style.css
@@ -153,3 +153,25 @@ button{
     bottom:50px;
     right: 50px;
 }
+
+h1::first-letter{
+    font-style: normal;
+    margin-right: 5px;
+}
+
+h2{
+    position: relative;
+}
+
+h2::after{
+    content:"TOP";
+    background: yellow;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    right:-25px;
+    top:-10px;
+    color:#444;
+}
